--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>个人介绍</h1>
+    <div style="background-color: gray">自我介绍</div>
+
+    <img src="zaza.jpg" width="42" height="42" == $0
+
     <p>morpheus,伟大的睡神</p>
   </body>
 </html>
