--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
     <img src="zaza.jpg" width="42" height="42" == $0
 
     <p>morpheus,伟大的睡神</p>
-  </body>
+    <div style ="color: blue;">测试 01</di>
+     <input class ="measurement"
+      type="button"
+     value="测试02"
 </html>
